// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Atoms | DropdownBubble Default Story 1`] = `
<div
  className="DropdownBubble-sc-16ly6j0-0 FVerW"
>
  <span
    className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 lmsdTq"
  >
    Hello world!
  </span>
</div>
`;

exports[`Storyshots Atoms | DropdownBubble Different Triangle Position 1`] = `
<div
  className="Display__StyledFlexDiv-sc-1yo6rmg-0 dODlaT"
  direction="column"
>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
    >
      left
    </div>
    <div>
      <div
        className="DropdownBubble-sc-16ly6j0-0 ivmKuu"
      >
        <span
          className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 lmsdTq"
        >
          Hello world!
        </span>
      </div>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
    >
      right
    </div>
    <div>
      <div
        className="DropdownBubble-sc-16ly6j0-0 FVerW"
      >
        <span
          className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 lmsdTq"
        >
          Hello world!
        </span>
      </div>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
    >
      center
    </div>
    <div>
      <div
        className="DropdownBubble-sc-16ly6j0-0 kyYQQC"
      >
        <span
          className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 lmsdTq"
        >
          Hello world!
        </span>
      </div>
    </div>
  </div>
</div>
`;
